--- a/css/style.css
+++ b/css/style.css
@@ -470,9 +470,6 @@ main {
     text-align: center;
     color: #000000;
 }
-.section4-box1 > p:last-of-type, .section4-box2 > p:last-of-type, .section4-box3 >p:last-of-type {
-    padding-bottom: 40px;
-}
 
 .section4-box1 > p:first-of-type, .section4-box2 > p:first-of-type, .section4-box3 > p:first-of-type {
     font-family: 'Open Sans', sans-serif;
@@ -483,8 +480,12 @@ main {
     letter-spacing: 0;
 }
 
-.section4-box1 > p:nth-of-type(2), .section4-box2 > p:nth-of-type(2), .section4-box3 > p:nth-of-type(2){
+.section4-box1 > p:nth-of-type(2), .section4-box3 > p:nth-of-type(2){
     padding-top: 40px;
+}
+
+.section4-box2 > p:nth-of-type(2) {
+    padding-top: 50px;
 }
 
 .section4-box1 > p:first-of-type {
@@ -519,11 +520,16 @@ main {
 .section4-box1 > a, .section4-box2 > a, .section4-box3 > a {
     font-family: 'Open Sans Bold', sans-serif;
     font-size: 13px;
+    line-height: 50px;
     color: #FFFFFF;
     border-radius: 23px;
-    padding:20px 60px;
-    margin-top: 180px;
+    width:150px;
+    height: 50px;
     text-decoration: none;
+    display: inline-block;
+    position: relative;
+    margin-top: 40px;
+    bottom: -25px;
 }
 
 .section4-box1 > a {
@@ -532,21 +538,149 @@ main {
 .section4-box2 > a {
     background: #07ACE6 0% 0% no-repeat padding-box;
     box-shadow: 5px 10px 27px #07ACE629;
+    margin-top: 50px;
 }
 .section4-box3 > a {
     background: #55DFB4 0% 0% no-repeat padding-box;
 }
 
 .section4-box1 > p > span, .section4-box2 > p > span, .section4-box3 > p > span{
-    font-size: 11px;
-    line-height: 0px;
     border: 1px solid #55DFB4;
     border-radius: 2px;
-    padding-right: 11px;
     margin-right: 10px;
+    width:11px;
+    height:11px;
+    display: inline-block;
 }
 
 .section4-box1 > p:nth-of-type(n+5) > span, .section4-box2 > p:last-of-type > span {
     border: 1px solid #EB476E;
+}
 
+.section5 {
+    background: #FFFFFF 0% 0% no-repeat padding-box;
+    width: 100vw;
+}
+.section5-content {
+    width: 100%;
+    padding-top: 150px;
+    display: flex;
+    align-items: flex-start;
+    justify-content: center;
+}
+.section5-text {
+    width:30%;
+    display: flex;
+    align-items: flex-start;
+    justify-content: flex-start;
+    flex-direction: column;
+    margin-right: 10%;
+}
+
+.section5-text > h1 {
+    letter-spacing: 0;
+    color: #000000;
+    text-align: left;
+    font-family: 'Raleway', sans-serif;
+    font-size: 49px;
+    line-height: 59px;
+}
+
+.section5-text > p {
+    letter-spacing: 0;
+    color: #000000;
+    text-align: left;
+    font-family: 'Open Sans', sans-serif;
+    font-size: 16px;
+    line-height: 22px;
+    padding-top: 22px;
+}
+
+.section5-text >div {
+    padding-top: 30px;
+}
+
+.section5-text > div > span {
+    letter-spacing: 0;
+    color: #A5A5A5;
+    font-family: 'Open Sans Semibold', sans-serif;
+    font-size: 16px;
+    line-height: 22px;
+    padding-right: 20px;
+}
+
+.section5-text > div >img {
+    display: inline-block;
+    width:27px;
+    height:27px;
+    top: 8px;
+    position: relative;
+    margin-right: 10px;
+}
+
+.section5-form {
+    width: 30%;
+}
+
+.section5-form :nth-child(n) {
+    display: block;
+}
+
+.section5-form input:nth-of-type(1), .section5-form input:nth-of-type(2) {
+    width: 100%;
+    margin-bottom: 20px;
+    margin-top: 15px;
+    border: none;
+    border-bottom: 1px solid #08A6E4;
+    font-family: 'Open Sans Bold', sans-serif;
+    font-size: 20px;
+    line-height: 15px;
+}
+
+.section5-form input:nth-of-type(2) {
+    margin-bottom: 30px;
+}
+
+.section5-form > form > input:nth-of-type(3) {
+    float: left;
+    /*margin-right: 10px;*/
+    background: #FFFFFF 0% 0% no-repeat padding-box;
+    border: 1px solid #95989A;
+    border-radius: 4px;
+    width: 24px;
+    height:24px;
+
+}
+
+.section5-form > form > p {
+    font-family: 'Open Sans Bold', sans-serif;
+    font-size: 12px;
+    line-height: 17px;
+    letter-spacing: 0;
+    color: #707070;
+    padding-left: 30px;
+
+}
+
+.section5-form > form > label {
+    text-align: left;
+    letter-spacing: 3.28px;
+    color: #08A6E4;
+    font-family: 'Open Sans Bold', sans-serif;
+    font-size: 11px;
+    line-height: 15px;
+}
+
+.section5-form > form > button {
+    float: right;
+    background: #08A6E4 0% 0% no-repeat padding-box;
+    box-shadow: 5px 10px 14px #07ACE629;
+    border-radius: 35px;
+    width: 226px;
+    height: 57px;
+    font-family: 'Open Sans Bold', sans-serif;
+    font-size: 13px;
+    line-height: 18px;
+    color: #FFFFFF;
+    margin-top: 20px;
 }
