--- a/css/style.css
+++ b/css/style.css
@@ -34,7 +34,6 @@ header {
     align-items: center;
     justify-content: space-between;
     width: 100%;
-
 }
 
 .page-header-logo {
@@ -78,7 +77,7 @@ main {
     background-size: contain;
     background-position: bottom;
     background-repeat: no-repeat;
-    width: 100vw;
+    /*width: 100vw;*/
     height: 700px;
 }
 
@@ -124,7 +123,7 @@ main {
 .section2 {
     background: #FFFFFF 0% 0% no-repeat padding-box;
     box-shadow: 0px -5px 80px #00000029;
-    width: 100vw;
+    /*width: 100vw;*/
     padding-top: 100px;
 }
 
@@ -208,7 +207,7 @@ main {
 
 .section3 {
     background: #F7F7F7 0% 0% no-repeat padding-box;
-    width: 100vw;
+    /*width: 100vw;*/
 }
 
 .section3-content {
@@ -218,7 +217,6 @@ main {
     flex-direction: column;
     width: 100%;
     padding-top: 100px;
-
 }
 
 .section3-box1 {
@@ -430,7 +428,7 @@ main {
 
 .section4 {
     background: #FFFFFF 0% 0% no-repeat padding-box;
-    width: 100vw;
+    /*width: 100vw;*/
 }
 .section4-content {
     text-align: center;
@@ -559,7 +557,7 @@ main {
 
 .section5 {
     background: #FFFFFF 0% 0% no-repeat padding-box;
-    width: 100vw;
+    /*width: 100vw;*/
 }
 .section5-content {
     width: 100%;
@@ -683,4 +681,42 @@ main {
     line-height: 18px;
     color: #FFFFFF;
     margin-top: 20px;
+    cursor: pointer;
+}
+
+footer {
+    background: #F7F7F7 0% 0% no-repeat padding-box;
+    box-shadow: 0px -5px 40px #00000029;
+    /*width: 100%;*/
+}
+
+.section-footer {
+    width: 100%;
+    display: flex;
+    align-items: center;
+    justify-content: space-between;
+    padding: 20px 10px;
+}
+
+.left-footer > h1 {
+    text-align: left;
+    font-family: 'Raleway Light', sans-serif;
+    font-size: 26px;
+    line-height: 31px;
+    letter-spacing: 0;
+    color: #08A6E4;
+}
+
+.left-footer >p {
+    text-align: left;
+    font-family: 'Open Sans', sans-serif;
+    font-size: 11px;
+    line-height: 15px;
+    letter-spacing: 0;
+    color: #A5A5A5;
+    padding-top: 5px;
+}
+
+.right-footer > a {
+    padding-left: 15px;
 }
